apps/on-prem/user-apps/media/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  serviceName: jellyfins
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:10.11.11@sha256:438e44330078e6b1a810fdec9dc0f4773e6595edb137c5eb4417a516da4c7f0e
        ports:
        - containerPort: 8096
        volumeMounts:
          - name: config
            mountPath: /config
          - name: tvshows
            mountPath: /tvshows
          - name: movies
            mountPath: /movies
          - name: music
            mountPath: /music
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: tvshows
          hostPath:
            path: /mnt/media/tvshows
        - name: movies
          hostPath:
            path: /mnt/media/movies
        - name: music
          hostPath:
            path: /mnt/media/music
