apps/on-prem/user-apps/media/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-httproute
  namespace: media
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - jellyfin.binarybraids.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - kind: Service
        name: jellyfin-service
        namespace: media
        port: 8096
