apps/on-prem/user-apps/media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - jellyfin.binarybraids.com
  rules:
  - host: jellyfin.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jellyfin-service
            port: 
              number: 8096
